--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     tools:context=".Fragmentsnetflix.HomeFragment">
 
@@ -99,11 +100,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
                 android:layout_margin="20dp"
-                android:background="@drawable/posterpscrbackparent"
-                android:padding="3dp"
+
 
                 >
 
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    app:cardCornerRadius="20dp"
+                    >
                 <ImageView
                     android:id="@+id/posterparentscr"
                     android:layout_width="match_parent"
@@ -115,6 +120,9 @@
                     android:background="@drawable/posterpscrbackparent"
                     android:scaleType="centerCrop"
                     android:src="@drawable/posterimage" />
+
+
+                </androidx.cardview.widget.CardView>
                 <LinearLayout
 
                     android:layout_width="match_parent"
@@ -143,12 +151,13 @@
                         android:layout_height="40dp"
                         android:text="My List"
                         android:textAllCaps="false"
-                        android:paddingStart="40dp"
-                        android:paddingEnd="40dp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="20dp"
                         android:layout_marginStart="10dp"
                         android:textColor="@color/white"
                         style="@style/customButtonmainpostermylist"
-
+app:icon="@drawable/plusicon"
+                        app:iconTint="@color/white"
 
                         />
 
